--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <title>
-    Daya Agananta Nusantara - Danantara 
+    Daya Anagatan Nusantara - Danantara 
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,900" />
@@ -42,8 +42,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center mx-auto my-auto">
-            <h1 class="text-white">Daya Aganata Nusantara</h1>
-            <p class="lead mb-4 text-white opacity-8">"Untuk Kemakmuran Indonesia"</p>
+            <h1 class="text-white">Daya Anagata Nusantara</h1>
+            <p class="lead mb-4 text-white opacity-8">Untuk Kemakmuran Indonesia</p>
           </div>
         </div>
       </div>
